--- a/index.htlm.html
+++ b/index.htlm.html
@@ -1,14 +1,14 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title> My Book </title>
-    <meta charset="UTF-8">
+<title>Page Title</title>
+<body style="background-color:rgb(248, 202, 210)"></body>
 </head>
 <body>
-    <body style="background-color:rgb(248, 202, 210)"></body>
-    <h3> Tiny pretty things </h3>
-    <p><Gigi, Bette, and June, three top students at an exclusive Manhattan ballet school, have seen their fair share of drama. Free-spirited new girl Gigi just wants to dance—but the very act might kill her. Privileged New Yorker Bette's desire to escape the shadow of her ballet-star sister brings out a dangerous edge in her./p>
-    <img src="https://m.media-amazon.com/images/M/MV5BZmY0OGIxODUtMzc2NS00OTlmLWEwZTctYzVmNmQzYjE3Njc5XkEyXkFqcGdeQXVyODc0OTEyNDU@._V1_.jpg">
+<h1>Tiny pretty tings</h1>
+<meta charset="UTF-8">
+<p>Gigi, Bette, and June, three top students at an exclusive Manhattan ballet school, have seen their fair share of drama. Free-spirited new girl Gigi just wants to dance—but the very act might kill her. Privileged New Yorker Bette's desire to escape the shadow of her ballet-star sister brings out a dangerous edge in her.</p>
+<img src="https://m.media-amazon.com/images/M/MV5BZmY0OGIxODUtMzc2NS00OTlmLWEwZTctYzVmNmQzYjE3Njc5XkEyXkFqcGdeQXVyODc0OTEyNDU@._V1_.jpg">
     <p class="solid"></p>
 </body>
 </html>
